--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.7",
     "jest": "^29.7.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "typescript": "^5.7.3"
   }
 }
